Добавляет некоторые настройки линтера

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,3 +7,14 @@ env:
   browser: true
 
 extends: 'htmlacademy/vanilla'
+
+rules:
+  comma-dangle:
+    - error
+    - always-multiline
+  comma-spacing:
+    - error
+    - { before: false, after: true }
+  object-curly-spacing:
+    - error
+    - always
