--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -18,3 +18,9 @@ rules:
   object-curly-spacing:
     - error
     - always
+  key-spacing:
+    - error
+    - { beforeColon: false }
+  space-in-parens:
+    - error
+    - never
