--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "webpack-cli": "5.0.0",
     "webpack-dev-server": "4.11.1"
   },
+  "dependencies": {
+    "dayjs": "1.11.7"
+  },
   "engines": {
     "node": "18"
-  },
-  "type": "module"
+  }
 }
