--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "webpack-dev-server": "4.11.1"
   },
   "dependencies": {
-    "dayjs": "1.11.7"
+    "dayjs": "1.11.7",
+    "flatpickr": "4.6.13"
   },
   "engines": {
     "node": "18"
